# Distrac

./: CMakeLists.txt  LICENSE.md  README.md  demo-trace-definition.distrac
include/distrac/: distrac.h  headers.h  types.h
include/distrac/analysis/: definition.hpp  entry_matcher.hpp  event.hpp  event_definition.hpp  event_iterator.hpp  node.hpp  property.hpp  property_definition.hpp  tracefile.hpp  util.hpp
include/distrac/codegen/: event.hpp  event_definition.hpp  parser.hpp  property.hpp  property_definition.hpp
src/: CMakeLists.txt
src/analysis/: definition.cpp  entry_matcher.cpp  event.cpp  event_definition.cpp  node.cpp  property.cpp  property_definition.cpp  test_entry_matcher.cpp  tracefile.cpp
src/codegen/: event.cpp  event_definition.cpp  parser.cpp  property.cpp
src/codegen-bin/: codegen_main.cpp
src/lib/: distrac.c  test_distrac.cpp  test_types.cpp  types.c  writer.c
test/: CMakeLists.txt
